fixed noticedboard element placement and styling again. added css to body on index.css - trying to eliminate scrolling whole page on mobile. Now for testing on device

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,6 +58,12 @@ body {
     perspective-origin: 0 0;
 }
 
+body {
+    overscroll-behavior: none;
+    position: fixed;
+    width: 100%;
+}
+
 @layer base {
     :root {
         --radius: 0.625rem;
